# calsbot

./: .env.example  .gitignore  .replit  .replitignore  Aptfile  DATA_SAFETY.md  DEPLOYMENT_GUIDE.md  DEPLOY_TO_RAILWAY.txt  Dockerfile  ENV_VARIABLES.txt  NOWPAYMENTS_SETUP_GUIDE.md  PRECISION_ENTRY_SYSTEM.md  PRE_LAUNCH_CHECKLIST.md  RAILWAY_DEPLOYMENT.md  README.md  USAGE.md  deploy_to_railway.sh  main.py  migrate_add_wallet.py  migrate_referral_codes.py  migrate_to_production.sql  migration_add_referral_payouts.sql  migration_add_support_tickets.sql  migration_remove_paper_trading.sql  nixpacks.toml  pyproject.toml  railway.toml  replit.md  requirements.txt  start.sh  strategy_portal_server.py  test_avax_trade.py  tracker_server.py
.agents/: agent_assets_metadata.toml
app/: __init__.py  advisory_lock_ids.py  cache.py  config.py  ctrader_feed_lock.py  ctrader_feed_runner.py  database.py  db_resilience.py  deploy_stamp.py  deployment.py  executor_leadership.py  executor_lock.py  executor_runner.py  gemini_gold_runner.py  gold_ai_runner.py  lock_ids.py  logging_safe.py  models.py  portal_auth.py  portal_session.py  schema_bootstrap.py  schema_reset_once_entry.py  social_models.py  strategy_marketplace_ext.py  strategy_models.py  tiers.py  trade_mgmt_schema.py
attached_assets/: Pasted--2025-10-24-17-26-43-561-app-services-smart-exit-INFO-Using-Binance-as-fallback-for-Bitunix-ma-1761326841756_1761326841757.txt  Pasted--2025-10-25-16-59-46-629-app-services-bot-INFO-Starting-Telegram-bot-2025-10-25-16-59-46-63-1761411631535_1761411631536.txt  (+75 more)
mobile/: app.json  (+2 more)
(+578 files in other folders)
