[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.22.0",
    "ccxt>=4.5.10",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "openai>=2.3.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.44",
    "ta>=0.11.0",
    "uvicorn[standard]>=0.37.0",
]
